multicol: fixing hierarchy issue with paddings > 768

--- a/stylesheets/multicol.styl
+++ b/stylesheets/multicol.styl
@@ -7,6 +7,9 @@
   max-width 1140px
   margin 0 auto
   overflow hidden
+  .onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol, .sevencol, .eightcol, .ninecol, .tencol, .elevencol, .twelvecol
+    padding-left 0
+    padding-right 0
   .onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol, .sevencol, .eightcol, .ninecol, .tencol, .elevencol
     margin-right 3.8%
     float left
